Part 2 done
